--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p class="odd-color">Number 1 - I'm a class!</p>
+    <div id="blue-text" class="even-number">Number 2 - I'm one ID.</div>
+    <p class="odd-color samefont">Number 3 - I'm a class, but cooler!</p>
+    <div id="green-color" class="even-number samefont">Number 4 - I'm another ID.</div>
+    <p class="odd-color">Number 5 - I'm a class!</p>
   </body>
 </html>
